--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,236 +1,420 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	line-height: 1.5;
+	font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+	color-scheme: light dark;
+	color: rgba(255, 255, 255, 0.87);
+	background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+	font-weight: 500;
+	color: #646cff;
+	text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+	color: #535bf2;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+	margin: 0;
+	display: flex;
+	place-items: center;
+	min-width: 320px;
+	min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+	font-size: 3.2em;
+	line-height: 1.1;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+	border-radius: 8px;
+	border: 1px solid transparent;
+	padding: 0.6em 1.2em;
+	font-size: 1em;
+	font-weight: 500;
+	font-family: inherit;
+	background-color: #1a1a1a;
+	cursor: pointer;
+	transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+	border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+	outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+	:root {
+		color: #213547;
+		background-color: #ffffff;
+	}
+	a:hover {
+		color: #747bff;
+	}
+	button {
+		background-color: #f9f9f9;
+	}
 }
 
 body {
-  background-color: #f2f6f8 !important;
-  width: 100%;
-  height: 100%;
+	background-color: #dbd3d8 !important;
+	width: 100%;
+	height: 100%;
 }
 
 .login-title {
-  font-size: 25px;
-  font-weight: bolder;
+	font-size: 25px;
+	font-weight: bolder;
 }
 
 @media (min-width: 1024px) {
-  .menu-left {
-    left: 25px;
-  }
+	.menu-left {
+		left: 25px;
+	}
 }
 
 .form-outline {
-  border: 1px dotted black;
+	border: 1px dotted black;
 }
 
 #root {
-  width: 100% !important;
-  height: 100% !important;
+	width: 100% !important;
+	height: 100% !important;
 }
 
 #header {
-  background-color: black;
-  color: white;
-  height: 125px;
+	background-color: black;
+	color: white;
+	height: 125px;
 
-  font-size: 35px;
+	font-size: 35px;
 }
 
 #header a {
-  color: white;
+	color: white;
 }
 
 .menu-left {
-  max-width: 16.67%;
-  min-width: 225px;
-  background-color: white;
-  height: 80vh;
-  position: fixed;
-  top: 129px;
-  left: 0px;
+	max-width: 16.67%;
+	min-width: 225px;
+	background-color: #eff1f3;
+	height: 80vh;
+	position: fixed;
+	top: 129px;
+	left: 0px;
 }
 
 .menu-link {
-  font-size: 20px;
-  color: black;
+	font-size: 20px;
+	color: black;
 }
 
 a:hover {
-  color: white;
+	color: #eff1f3;
 }
 
 .each-menu-row:hover {
-  scale: 1.3;
-  transition: 0.3s ease-in-out;
-  background-color: grey;
-  color: white;
+	scale: 1.3;
+	transition: 0.3s ease-in-out;
+	background-color: grey;
+	color: #eff1f3;
 }
 
 .menu-section-heading {
-  font-size: 30px;
-  font-weight: bold;
-  padding-bottom: 10px;
-  padding-top: 10px;
+	font-size: 30px;
+	font-weight: bold;
+	padding-bottom: 10px;
+	padding-top: 10px;
 }
 
 .fa-icon {
-  margin-left: 10px;
-  margin-right: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 .each-menu-row {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-left: 25px;
-  max-width: 80%;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	margin-left: 25px;
+	max-width: 80%;
 }
 
 .each-menu-section {
-  max-width: 100%;
+	max-width: 100%;
 }
-
 
 @media (max-width: 1024px) {
-  .add-time-slots {
-    left: 22%;
-  }
-}
-
-@media (max-width: 768px) {
-  .login-title {
-    font-size: 19px;
-  }
-
-  .fw-normal {
-    font-size: 16px;
-  }
-
-  .menu-left {
-    display: none;
-  }
-
- 
+	.add-time-slots {
+		left: 22%;
+	}
 }
 
 .add-project-link {
-  font-size: 32px;
+	font-size: 32px;
 }
 
 .add-project-link:hover {
-  color: green;
+	color: green;
 }
 
 .add-project-link-div:hover {
-  scale: 1.1;
-  transition: 0.3s ease-in-out;
+	scale: 1.1;
+	transition: 0.3s ease-in-out;
 }
 
 .add-project-link-div {
-  padding-top: 10px;
+	padding-top: 10px;
 }
 
 .upper-add-time-slots {
-  background-color: white;
-  border: 2px solid grey;
-  border-bottom: 0px;
-  padding-bottom: 10px;
-  padding-top: 10px;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+	background-color: #eff1f3;
+	border: 2px solid grey;
+	border-bottom: 0px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
 }
 
 .lower-add-time-slots {
-  background-color: white;
-  border: 2px solid grey;
-  padding-bottom: 10px;
-  padding-top: 10px;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
+	background-color: #eff1f3;
+	border: 2px solid grey;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	border-bottom-left-radius: 15px;
+	border-bottom-right-radius: 15px;
 }
 
 .current-hours-worked {
-  padding-left: 10px;
-  padding-right: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .add-time-slots-start-button {
-  background-color: green;
-  border-radius: 10px;
-  width: 50%;
+	background-color: green;
+	border-radius: 10px;
+	width: 50%;
 }
 
 .add-time-slots-start-button:hover {
-  background-color: darkgreen;
+	background-color: darkgreen;
 }
 
-.wrapper{
-  position: fixed;
-  left: 16.67%;
-  top: 140px;
+.wrapper {
+	position: fixed;
+	left: 16.67%;
+	top: 140px;
+}
+
+.summary-task-name {
+	display: inline;
+}
+
+.current-instances {
+	background-color: lightblue;
+	padding-left: 5px;
+	padding-right: 7px;
+}
+
+.current-instances:hover {
+	background-color: blue;
+	color: #eff1f3;
+	transition: 0.15s ease-in-out;
+}
+
+.summary-task-container-body-col1 {
+	background-color: #eff1f3;
+	height: 100%;
+	padding-top: 10px;
+}
+.summary-task-container-body-col2 {
+	text-align: right;
+	padding-right: 37px;
+	background-color: #eff1f3;
+	font-weight: bold;
+	height: 100%;
+	padding-top: 10px;
+	padding-right: 0px;
+}
+
+.summary-task-name {
+	margin-left: 30px;
+}
+
+.summary-task-container-body {
+	font-size: 24px;
+	align-content: center;
+	height: 75px;
+}
+
+.summary-task-container-heading {
+	background-color: grey;
+	padding-top: 10px;
+}
+
+.time-display {
+	font-weight: 700;
+	font-size: 20px;
+	padding-right: 10px;
+	padding-left: 10px;
+}
+
+.week-summary-text {
+	display: inline;
+}
+
+.week-summary {
+	padding-bottom: 20px;
+}
+
+.add-time-start-section {
+	padding-left: 30px;
+}
+
+.all-instance-summary {
+	border: 1px solid black;
+}
+
+.day-time-spent {
+	text-align: right;
+}
+
+.day-time-spent-container {
+	padding-right: 0px;
+}
+
+.each-instance {
+	background-color: lightblue !important;
+}
+
+.each-instance-body {
+	opacity: 0;
+	transition: opacity 0.5s ease-in-out;
+}
+
+.each-instance-body {
+	opacity: 1;
+}
+
+.digits {
+	font-weight: bold;
+	display: inline;
+}
+
+.timer {
+	text-align: center;
+}
+
+.button-div {
+	text-align: center;
+}
+
+.Control-Buttons {
+	text-align: center;
+}
+
+.dropdown {
+	text-align: center;
+}
+
+@media (max-width: 1440px) {
+	.wrapper {
+		max-width: 1180px;
+	}
+}
+
+@media (max-width: 1024px) {
+	.wrapper {
+		max-width: 800px;
+		margin-left: 20px;
+		left: 20%;
+	}
+
+	.add-time-start-section {
+		margin: 0px;
+		padding: 0px;
+	}
+
+	.current-hours-worked {
+		padding: 0px;
+		padding-right: 10px;
+	}
+}
+
+@media (max-width: 768px) {
+	.login-title {
+		font-size: 19px;
+	}
+
+	.fw-normal {
+		font-size: 16px;
+	}
+
+	.menu-left {
+		display: none;
+	}
+
+	.wrapper {
+		left: 0%;
+		max-width: 700px;
+		padding: 0px;
+		margin: 0px;
+	}
+
+	.add-time-slot-heading {
+		font-size: 18px;
+	}
+
+	.add-time-start-section {
+		text-align: center;
+	}
+
+	.add-project-link {
+		font-size: 12px;
+	}
+
+	.fa-icon {
+		margin: 0px;
+	}
+
+	.add-project-link-div {
+		padding: 0px;
+		padding-left: 10px;
+	}
+
+	.time-slots-col {
+		padding-right: 0px;
+	}
+
+	.week-summary-heading {
+		font-size: 25px;
+	}
+
+	.day-time-spent-container {
+		padding-left: 0px;
+	}
+
+	.day-time-spent {
+		margin: 0px;
+	}
+
+	.time-display {
+		font-size: 14px;
+	}
+
+	.summary-task-container-heading {
+		padding-bottom: 10px;
+	}
 }
