--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -329,6 +329,31 @@ a:hover {
 	text-align: center;
 }
 
+.week-summary-container {
+	text-align: left;
+}
+
+.add-time-slot-heading {
+	width: 100%;
+	height: 100%;
+	border: 0px;
+	font-size: 26px;
+	text-align: center;
+	background-color: #eff1f3;
+}
+
+.add-time-slot-heading:hover {
+	border: 2px solid grey;
+	border-radius: 16px;
+	transition: 0.25s ease-in-out;
+
+	font-size: 200%;
+}
+
+.week-summary-text-container {
+	margin-top: 20px;
+}
+
 @media (max-width: 1440px) {
 	.wrapper {
 		max-width: 1180px;
@@ -417,4 +442,43 @@ a:hover {
 	.summary-task-container-heading {
 		padding-bottom: 10px;
 	}
+}
+
+.manual-time-div {
+	text-align: center;
+	margin-bottom: 5px;
+	margin-top: 5px;
+}
+
+.submit-manual-btn {
+	max-width: 40%;
+	margin-left: 30%;
+	margin-right: 30%;
+	background-color: blue;
+}
+
+.manual-time-row {
+	border-right: 2px solid grey;
+}
+
+#project-dropdown {
+	background-color: blue;
+}
+
+input {
+	background-color: white;
+	color: black;
+	text-align: center;
+}
+
+.timer {
+	display: inline;
+}
+
+.button-div {
+	display: inline;
+}
+
+.time-slots-components-col {
+	text-align: right;
 }
