--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -266,7 +266,7 @@ a:hover {
 	padding-left: 10px;
 }
 
-.week-summary-text {
+.week-summary {
 	display: inline;
 }
 
@@ -351,19 +351,30 @@ a:hover {
 	border: 0px;
 	font-size: 26px;
 	text-align: center;
+	transition: 0.25s ease-in-out;
 	background-color: #eff1f3;
 }
 
 .add-time-slot-heading:hover {
 	border: 1px solid grey;
-	border-radius: 12px;
+	border-radius: 5px;
 	transition: 0.25s ease-in-out;
 
 	font-size: 175%;
 }
 
 .week-summary-text-container {
-	margin-top: 20px;
+	text-align: right;
+}
+
+.week-summary-text {
+	display: inline;
+}
+
+.week-summary-row {
+	justify-content: center;
+	align-items: center;
+	margin-left: 0px;
 }
 
 .manual-time-div {
@@ -418,6 +429,10 @@ input {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.week-summary-heading {
+	font-size: 30px;
 }
 
 @media (max-width: 1440px) {
