--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -120,10 +120,32 @@ body {
 	max-width: 16.67%;
 	min-width: 225px;
 	background-color: #eff1f3;
-	height: 80vh;
+	height: 100vh;
 	position: fixed;
-	top: 129px;
+	top: 90px;
 	left: 0px;
+}
+
+.logout-col {
+	position: fixed;
+	bottom: 40px;
+	width: 20%;
+}
+
+.logout-col:hover {
+	color: red;
+}
+
+#logout-link {
+	font-size: 40px;
+}
+
+#logout-link:hover {
+	color: red;
+}
+
+.fa-right-from-bracket {
+	font-size: 40px;
 }
 
 .menu-link {
@@ -191,7 +213,7 @@ a:hover {
 	padding-bottom: 10px;
 	padding-top: 10px;
 	border-radius: 10px;
-	width: 70vw;
+	width: 60vw;
 }
 
 .time-slots-row {
@@ -312,6 +334,11 @@ a:hover {
 .digits {
 	font-weight: bold;
 	display: inline;
+	font-size: 24px;
+}
+
+.add-time-icons {
+	margin: 4px;
 }
 
 .timer {
@@ -442,6 +469,40 @@ input {
 	width: 70vw;
 }
 
+.employee-table {
+	text-align: center;
+	margin-left: 10px;
+	margin-top: 20px;
+}
+
+.projects-table {
+	text-align: center;
+	margin-left: 10px;
+}
+
+.projects-title {
+	font-size: 35px;
+	margin-bottom: 20px;
+}
+
+.table th {
+	font-weight: bolder;
+	font-size: 18px;
+}
+
+tbody,
+td,
+tfoot,
+th,
+thead,
+tr {
+	border: 1px solid black;
+}
+
+td {
+	font-size: 16px;
+}
+
 @media (max-width: 1440px) {
 	.wrapper {
 		max-width: 1180px;
@@ -454,11 +515,27 @@ input {
 	.summary-task-name {
 		font-size: 25px;
 	}
+
+	td {
+		font-size: 15px;
+	}
 }
 
 @media (max-width: 1024px) {
+	.projects-table {
+		max-width: 75vw;
+	}
+
+	td {
+		font-size: 14px;
+	}
+
 	.add-time-slot-heading {
 		font-size: 17px;
+	}
+
+	.table th {
+		font-size: 16px;
 	}
 
 	.summary-task-name {
@@ -495,6 +572,27 @@ input {
 @media (max-width: 768px) {
 	#header a {
 		font-size: 15px;
+	}
+
+	td {
+		font-size: 13px;
+	}
+
+	.table th {
+		font-size: 12px;
+	}
+
+	.table > :not(caption) > * > * {
+		padding: 0.25rem 0.5rem;
+	}
+
+	.projects-table {
+		max-width: 100vw;
+	}
+
+	.projects-btn {
+		padding: 0px;
+		font-size: 12px;
 	}
 
 	.week-summary-text-container {
